# brawllib_rs

./: .travis.yml  Cargo.toml  clippy.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: nightly_deps_check.yml  rust.yml  testing.yml
examples/: chr0_display.rs  codeset_display.rs  dump_fighter.rs  export_subaction_for_wasm.rs  first_active_frames.rs  gif_generator.rs  high_level_frame_data.rs  index.html  lint.rs  low_level_frame_data.rs  low_level_parser.rs  modifier.rs  run_web_visualiser.sh  run_web_visualiser_release.sh  visualiser.rs  visualiser_for_wasm.rs
src/: action_names.rs  arc.rs  brawl_mod.rs  bres.rs  chr0.rs  compression.rs  fighter.rs  fighter_maps.rs  fighter_names.rs  high_level_fighter.rs  high_level_fighter_common.rs  init_hack_script.rs  lib.rs  math.rs  mbox.rs  misc_section.rs  parse.rs  plt0.rs  renderer.rs  resources.rs  sakurai.rs  script.rs  script_ast.rs  script_runner.rs  user_data.rs  util.rs  wii_memory.rs  wii_texture_formats.rs  wiird.rs  wiird_runner.rs
src/mdl0/: bones.rs  definitions.rs  mod.rs  objects.rs  palettes.rs  textures.rs  vertices.rs
src/renderer/: app.rs  camera.rs  draw.rs  gif.rs  mod.rs  wgpu_state.rs
src/renderer/app/: mod.rs  state.rs
src/renderer/shaders/: compile.sh  fighter.vert  fighter.vert.spv  shader.wgsl
src/sakurai/: fighter_data_common.rs  item_data.rs  mod.rs
src/sakurai/fighter_data/: misc_section.rs  mod.rs
src/script_ast/: mod.rs  variable_ast.rs
src/shaders/: fighter.frag.spv  fighter.vert.spv
src/wiird_runner/: mod.rs  wiird.rs
