[package]
name = "brawllib_rs"
edition = "2021"
version = "0.23.0"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Brawl character file parser, based on brawlbox/brawllib"
license = "MIT"
repository = "https://github.com/rukai/brawllib_rs"
keywords = ["super", "smash", "bros", "brawl", "lib"]
categories = ["games", "game-engines"]

[dependencies]
bitflags = "1"
byteorder = "1"
cgmath = { version = "0.18", features = ["mint", "serde"] }
log = "0.4"
serde = "1"
serde_derive = "1"
rayon = "1"
anyhow = "1"
env_logger = "0.9"
gif = "0.11"
wgpu = { version = "0.12", features = ["webgl"] }
fancy_slice = { version = "0.1", features = [] }
winit = { version = "0.26.1" }
winit_input_helper = "0.11"
raw-window-handle = "0.4"
futures = "0.3"
bytemuck = { version = "1", features = ["derive"] }

# wasm
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dev-dependencies]
getopts = "0.2"
mint = "0.5"
bincode = "1"

[profile.release]
debug-assertions = true

[workspace]
members = [
    "run-wasm",
]
