[package]
name = "brawllib_rs"
edition = "2021"
version = "0.24.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Brawl character file parser, based on brawlbox/brawllib"
license = "MIT"
repository = "https://github.com/rukai/brawllib_rs"
keywords = ["super", "smash", "bros", "brawl", "lib"]
categories = ["games", "game-engines"]

[dependencies]
bitflags = { version = "2" , features = ["serde"]}
byteorder = "1"
cgmath = { version = "0.18", features = ["mint", "serde"] }
log = "0.4"
serde = "1"
serde_derive = "1"
rayon = "1"
anyhow = "1"
env_logger = "0.10"
gif = "0.12"
wgpu = { version = "0.17", features = ["webgl"] }
fancy_slice = { version = "0.1", features = [] }
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.15"
raw-window-handle = "0.5"
futures = "0.3"
bytemuck = { version = "1", features = ["derive"] }

# wasm
console_log = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
web-time = "0.2"

[dev-dependencies]
getopts = "0.2"
mint = "0.5"
bincode = "1"

[profile.release]
debug-assertions = true

[workspace]
members = [
    "run-wasm",
]
